@@ -1,3 +1,8 @@
+8-24-2025
+- add syncthing
+- use grub for all machines by default
+
+
 8-22-2025
 - hotfix for yazi, xdg-open doesn't seem to work correctly with it anymore
 - update flake
